# letsorder

./: .gitignore  ADMIN_WORK_PLAN.md  CLAUDE.md  CRUSH.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  GEMINI.md  MIGRATION_PLAN.md  README.md  TECHNICAL_OVERVIEW.md  TESTS.md  WORK_PLAN.md  generate_types_manual.sh
backend/: Cargo.toml  deny.toml  email_template.txt  letsorder.db  letsorder.db-shm  letsorder.db-wal  letsorder.db.backup  settings.ini  setup_db.sh
backend/.cargo/: audit.toml
backend/.sqlx/: query-018d70f5157fc2c0ff0cac0f02a2ad39eeae3a54e529cee82f100ade9fb6e66f.json  query-02599250c2b7f38cfe9ccd5ecb15c9002544d7c0cf13dd11435af0f55989f612.json  query-05005eb8b36742717bf696741f6269fced5e25c22b36f3350e05e5137b32f9b3.json  query-053bca0dd61f777c681bd4aefaa6ce94525f5b91deb83ebd01389ca92eaad7e6.json  query-0705e30d7b343821da714aabce2d09dc16dfe7a50f0fb260a8f5752369f0118b.json  query-0b70c2a89a063748b150617779f4dfd22b2fa59b4444ca97f1fe398812e7070b.json  query-0b775dc34b149298bad732ad1404d65c67221bf69cbbf10d0827cf649ea3c93e.json  query-0baadf50e2291e0eea6f48ab3618353cec59bdb53da5b9eb8feafcfee028cde6.json  query-0c66a4b396872e2c64d680f6b15a53ea1017647b3040645c48c40b0d79d956c9.json  query-0c9a359a006667406c67454a6e8dfae6976f343179e36e0cdac6b7579f8e371f.json  query-0e31f343708770a711dcbd852cb8decb28dda8c93afa77fe6499bd52f869be4f.json  query-1017b8bbf69c50116fd8c7694bad3917fef82195c4b4cbef01aac008705639ae.json  query-11daedff4d4c3c1965f3f63cf3146834e0b9d93be2c36b485283140462e53916.json  query-1227b2906e2ffc4e73fbadf104f8e9daf201a5c129e2722d71776dd580824b8b.json  query-13233f14bdad33221367dede96e29f73e31b0f8507f1c8e14d58477d61467ae6.json  query-15c885482977b98f2053b5bf6c9f37e6c0624aaaac93bbeaafe9f1fb4718f12d.json  query-173fac9b495730d4fdb8a3165657d5d00ab8d74d290f9f2d220bef20fc2b6d07.json  query-1bd14a95aba890dc3e9f5661b07c49d8fd0296db32e3c0a1263bdb7ef6aeff38.json  query-1f5cfde99fd3f9946d4ffb7eaf141a80c0de088cfd49dd38ae4ed7cb3cc87170.json  query-205014eb5d1d47f4b0c99ddf6d8bc640f5d41e2c8163f439587d99dd7ff9996c.json  query-24876b7b3e7f7f77b424b4dc3c9940c7cc566fceda1badd0420e4c98a858514c.json  query-269631d680513d2a8533e86658a266fefc51a0aeb69e9d129c3dcc2063f65ccd.json  (+91 more)
backend/migrations/: 20250131000001_initial_schema.sql  (+4 more)
(+183 files in other folders)
