[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
jsonwebtoken = "9.2"
argon2 = "0.5"
actix-web-httpauth = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
env_logger = "0.10"
log = "0.4"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
