[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "setup_db"
path = "src/setup_db.rs"

[[bin]]
name = "generate_types"
path = "src/generate_types.rs"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate", "macros"] }
jsonwebtoken = "9.2"
argon2 = "0.5"
actix-web-httpauth = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
env_logger = "0.10"
log = "0.4"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
qrcode = "0.14"
image = "0.24"
base64 = "0.21"
regex = "1.10"
ts-rs = { version = "8.1", features = ["serde-compat", "uuid-impl", "chrono-impl"] }

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
